Widen and clean battle description boxes
Also clean some encounter descriptions

--- a/encounters/balthizard.html
+++ b/encounters/balthizard.html
@@ -266,7 +266,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<h3 id="shake-description">Description</h3>
 	<d-box theme="battledesc">
-		<d-text>Left <span class="break"></span>  Right= Mercy</d-text>
+		<d-text>Left & Right= Mercy</d-text>
 	</d-box>
 
 	<hr>
@@ -297,7 +297,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<h3 id="shakex-description">Description</h3>
 	<d-box theme="battledesc">
-		<d-text>Left <span class="break"></span>  Right= Mercy</d-text>
+		<d-text>Left & Right= Mercy</d-text>
 	</d-box>
 
 	<hr>
@@ -328,7 +328,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<h3 id="lightup-description">Description</h3>
 	<d-box theme="battledesc">
-		<d-text>50% <span class="break"></span>  TIRE others</d-text>
+		<d-text>50% &<span class="break"></span> TIRE others</d-text>
 	</d-box>
 
 	<hr>
