--- a/encounters/bibliox.html
+++ b/encounters/bibliox.html
@@ -267,11 +267,11 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<h3 id="easyproof-description">Description</h3>
 	<d-box theme="battledesc">
-		<d-text>More time to fix</d-text>
+		<d-text>More<span class="break"></span> time to fix</d-text>
 	</d-box>
 
 	<h3 id="easyproof-ft">Flavor text</h3>
-	<p class="note">Identical to the <a href="#proofread-ft">Proofread ACT</a>, but with a timer of around 6 seconds, and if any answer is chosen before time runs out, Bibliox also becomes <span class="blue">Tired</span>.</p>
+	<p class="note">Identical to the <a href="#proofread-ft">Proofread ACT</a>, but with a timer of around 6 seconds. As long as an answer is chosen before time runs out, regardless of whether the answer is right or wrong, Bibliox also becomes <span class="blue">Tired</span>.</p>
 </section>
 
 <section class="d-section" id="saction">
