--- a/encounters/mizzle.html
+++ b/encounters/mizzle.html
@@ -221,7 +221,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<h3 id="dazzle-description">Description</h3>
 	<d-box theme="battledesc">
-		<d-text>35% Mercy</d-text>
+		<d-text>35%<span class="break"></span> Mercy</d-text>
 	</d-box>
 
 	<hr>
