--- a/encounters/spamtonneoweird.html
+++ b/encounters/spamtonneoweird.html
@@ -455,9 +455,9 @@ toc:
 
 <section class="d-section" id="callforhelp">
 	<h2>{% include acticon chara="Ralsei" -%}/{% include acticon chara="Susie" -%}/{% include acticon chara="Noelle" -%} Call for help</h2>
-	<p>A nameless act. Replaces <a href="#check">Check</a>, <a href="#xslash">X-Slash</a>, and <a href="#friedpipis">FriedPipis</a>. Has several variants.</p>
+	<p>This ACT's name is blank in-game, displaying only the character icons. Replaces <a href="#check">Check</a>, <a href="#xslash">X-Slash</a>, and <a href="#friedpipis">FriedPipis</a>. Has several variants.</p>
 
-	<h3 id="callforhelp1">{% include acticon chara="Ralsei" -%} (First time)</h3>
+	<h3 id="callforhelp1">{% include acticon chara="Ralsei" %} (First time)</h3>
 	<h4>Flavor text</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Kris called for help...</d-text>
@@ -486,7 +486,7 @@ toc:
 
 	<hr>
 
-	<h3 id="callforhelp2">{% include acticon chara="Ralsei" -%} (Second time)</h3>
+	<h3 id="callforhelp2">{% include acticon chara="Ralsei" %} (Second time)</h3>
 	<h4>Flavor text</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Kris called for help...</d-text>
@@ -515,7 +515,7 @@ toc:
 
 	<hr>
 
-	<h3 id="callforhelp3">{% include acticon chara="Susie" -%} (Third time)</h3>
+	<h3 id="callforhelp3">{% include acticon chara="Susie" %} (Third time)</h3>
 	<h4>Flavor text</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Kris called for help...</d-text>
@@ -540,7 +540,7 @@ toc:
 
 	<hr>
 
-	<h3 id="callforhelp4">{% include acticon chara="Susie" -%} (Fourth time)</h3>
+	<h3 id="callforhelp4">{% include acticon chara="Susie" %} (Fourth time)</h3>
 	<h4>Flavor text</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Kris called for help...</d-text>
@@ -570,7 +570,7 @@ toc:
 
 	<hr>
 
-	<h3 id="callforhelp5">{% include acticon chara="Noelle" -%} (Fifth time)</h3>
+	<h3 id="callforhelp5">{% include acticon chara="Noelle" %} (Fifth time)</h3>
 	<h4>Flavor text</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>You whispered Noelle's name...</d-text>
