--- a/encounters/titanspawn.html
+++ b/encounters/titanspawn.html
@@ -188,7 +188,7 @@ toc:
 
 	<h3 id="dualheal-description">Description</h3>
 	<d-box theme="battledesc">
-		<d-text>Heal party</d-text>
+		<d-text>Heal<span class="break"></span> party</d-text>
 		<d-text class="orange">16% TP</d-text>
 	</d-box>
 
