--- a/misc/darkitems.html
+++ b/misc/darkitems.html
@@ -3377,7 +3377,7 @@ toc:
 
 	<h5>In battle</h5>
 	<d-box theme="battledesc">
-		<d-text>Heals 60HP</d-text>
+		<d-text>Heals<span class="break"></span> 60HP</d-text>
 	</d-box>
 
 	<h4 id="lifedew">Life Dew</h4>
