Add URL overriding and early link termination to index list items

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -17,7 +17,7 @@ items:
         sublist:
           -
             url: lancervslightners
-            name: Lancer (first encounter, VS Kris and Susie)
+            name: Lancer{END_LINK} (first encounter, VS Kris and Susie)
           -
             url: dummy
             name: Dummy
@@ -45,7 +45,7 @@ items:
             name: Ponman
           -
             url: kroundgreatboard
-            name: K. Round (first encounter)
+            name: K. Round{END_LINK} (first encounter)
       -
         name: Forest
         sublist:
@@ -66,7 +66,7 @@ items:
         sublist:
           -
             url: lancervssusie
-            name: Lancer (second encounter, VS Susie)
+            name: Lancer{END_LINK} (second encounter, VS Susie)
           -
             url: rudinnranger
             name: Rudinn Ranger
@@ -75,7 +75,7 @@ items:
             name: Head Hathy
           -
             url: kroundcardcastle
-            name: K. Round (second encounter)
+            name: K. Round{END_LINK} (second encounter)
           -
             url: king
             name: King
@@ -101,7 +101,7 @@ items:
             name: Sweet Cap'n Cakes
           -
             url: berdlycyberfield
-            name: Berdly (first encounter, on rollercoasters)
+            name: Berdly{END_LINK} (first encounter, on rollercoasters)
       -
         name: Cyber City
         sublist:
@@ -138,7 +138,7 @@ items:
             name: Mauswheel
           -
             url: rouxlsch2
-            name: Rouxls Kaard (first encounter, house-capturing game)
+            name: Rouxls Kaard{END_LINK} (first encounter, house-capturing game)
           # Werewerewire
           -
             url: queen
@@ -188,7 +188,7 @@ items:
       -
         name: Cold Place
         sublist:
-          # Tenna (second fight)
+          # Tenna{END_LINK} (second fight)
           -
             url: knight
             name: Roaring Knight
