--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -33,7 +33,7 @@ items:
             name: Susie's room
           -
             url: krissusieroom
-            name: Kris and Susie's combined room (Chapter 4 only)
+            name: Kris and Susie's combined room{END_LINK} (Chapter 4 only)
       -
         name: 3F
         sublist:
