--- a/locations/lightworld/index.html
+++ b/locations/lightworld/index.html
@@ -17,7 +17,7 @@ items:
         sublist:
           -
             url: downstairs
-            name: Downstairs (kitchen & living room)
+            name: Downstairs{END_LINK} (kitchen & living room)
           -
             url: bathroom
             name: Bathroom
