Document party spells, as seen in POWER menu

--- a/misc/index.html
+++ b/misc/index.html
@@ -48,6 +48,9 @@ items:
           # -
           #   url: powermenu
           #   name: POWER menu{END_LINK} - Character titles and stats
+          -
+            url: spells
+            name: Spells{END_LINK} - Magic and other abilities
           # TODO: Other menus...?
       -
         name: Enemy- and location-based
