--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -1,14 +1,23 @@
 ---
 title: POWER menu <span class="yellow">(DRAFT)</span>
+
 description: >
-  <p>Character levels, titles, personalized stats, and spells.</p>
+  <p>Character titles and personalized stats.</p>
   <p>Titles later in the list override any earlier ones. If the conditions for multiple titles are met, the one that comes last in this page's list will be used.</p>
+
+credits: >
+  <p>Compiled by wovenstarlight.</p>
+
 sources:
   -
     name: gml_Object_obj_darkcontroller_Draw_0
     chapters: [1, 2, 3, 4]
-credits: >
-  <p>Compiled by wovenstarlight.</p>
+
+see_also:
+  -
+    url: /misc/spells
+    name: Spells
+
 toc:
   -
     id: kris
@@ -293,9 +302,6 @@ GATHERED THE DATA!! just gotta figure out how to format this as an HTML page
 
 All chars get Attack, Defense, Magic, Custom stat 1, Custom stat 2, Guts. Any custom stat slot not being used displays as ???
 sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
-
-gotta add each character's SPELLS section also... pull names/costs from gml_GlobalScript_scr_spellinfo
-or do we want to save that for a separate page...?
 {% endcomment %}
 
 <section class="d-section" id="kris">
