Trim linked text on disambig pages

--- a/encounters/berdly.html
+++ b/encounters/berdly.html
@@ -6,7 +6,7 @@ layout: disambiguation
 items:
   -
     url: /encounters/berdlycyberfield
-    name: First Berdly encounter - Cyber Field, on rollercoasters
+    name: First Berdly encounter{END_LINK} - Cyber Field, on rollercoasters
   -
     name: Second Berdly encounter - Cyber City, in alleyway
     sublist:
