--- a/encounters/kround.html
+++ b/encounters/kround.html
@@ -11,8 +11,8 @@ see_also:
 items:
   -
     url: /encounters/kroundgreatboard
-    name: First K. Round encounter (on the Great Board)
+    name: First K. Round encounter{END_LINK} (on the Great Board)
   -
     url: /encounters/kroundcardcastle
-    name: Second K. Round encounter (in Card Castle)
+    name: Second K. Round encounter{END_LINK} (in Card Castle)
 ---
