--- a/encounters/lancer.html
+++ b/encounters/lancer.html
@@ -6,11 +6,11 @@ layout: disambiguation
 items:
   -
     url: /encounters/lancervslightners
-    name: First Lancer solo encounter (VS Lightners)
+    name: First Lancer solo encounter{END_LINK} (VS Lightners)
   -
     url: /encounters/badguys
     name: Susie and Lancer encounter
   -
     url: /encounters/lancervssusie
-    name: Second Lancer solo encounter (VS Susie)
+    name: Second Lancer solo encounter{END_LINK} (VS Susie)
 ---
