--- a/encounters/rouxls.html
+++ b/encounters/rouxls.html
@@ -6,8 +6,8 @@ layout: disambiguation
 items:
   -
     url: /encounters/rouxlsch2
-    name: First Rouxls encounter - Chapter 2, house-capturing game
+    name: First Rouxls encounter{END_LINK} - Chapter 2, house-capturing game
   -
     url: /encounters/rouxlsch3
-    name: Second Rouxls encounter - Chapter 3, ACTing only
+    name: Second Rouxls encounter{END_LINK} - Chapter 3, ACTing only
 ---
