Mizzle encounter: Fix non-relative URLs

--- a/encounters/mizzle.html
+++ b/encounters/mizzle.html
@@ -261,19 +261,19 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<d-box theme="battlemenu">
 		<d-text asterisk>Stole Scarlixir!</d-text>
 	</d-box>
-	<p class="note"><a href="{{ '/misc/darkitems#scarlixir' }}">Scarlixir</a> is added to the inventory.</p>
+	<p class="note"><a href="{{ '/misc/darkitems#scarlixir' | relative_url }}">Scarlixir</a> is added to the inventory.</p>
 	<hr class="hr2">
 	<p class="note">29.7% (30/101) chance:</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Stole Darker Candy!</d-text>
 	</d-box>
-	<p class="note"><a href="{{ '/misc/darkitems#darkercandy' }}">Darker Candy</a> is added to the inventory.</p>
+	<p class="note"><a href="{{ '/misc/darkitems#darkercandy' | relative_url }}">Darker Candy</a> is added to the inventory.</p>
 	<hr class="hr2">
 	<p class="note">9.9% (10/101) chance:</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Stole Revive Mint!</d-text>
 	</d-box>
-	<p class="note"><a href="{{ '/misc/darkitems#revivemint' }}">Revive Mint</a> is added to the inventory.</p>
+	<p class="note"><a href="{{ '/misc/darkitems#revivemint' | relative_url }}">Revive Mint</a> is added to the inventory.</p>
 
 	<h4 id="embezzle-fail">Failure</h4>
 	<p>49.5% chance if Mizzle was not <span class="blue">Tired</span>.</p>
