Document Ribbick enc., update Rabbick with ch3 info

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -184,7 +184,11 @@ items:
       -
         name: TV World
         sublist:
-          # Tenna (first fight), Ribbick, Rouxls Kaard
+          # Tenna (first fight)
+          -
+            url: ribbick
+            name: Ribbick
+          # Rouxls Kaard{END_LINK} (second encounter, ACTing only)
       -
         name: Cold Place
         sublist:
