--- a/encounters/rabbick.html
+++ b/encounters/rabbick.html
@@ -129,7 +129,10 @@ encounters 16/17/24/32; 24 is unused
 	<hr>
 
 	<h3 id="ft-spareable">Spareable</h3>
-	<p>Unused. (Got assigned to the wrong variable.)</p> <!-- global.msg instead of global.battlemsg, if you were wondering -->
+	<p>
+		Unused in Chapter 1, as it was assigned to the wrong variable. <!-- global.msg instead of global.battlemsg, if you were wondering -->
+		Used in Chapter 3.
+	</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Rabbick is now nice and clean.</d-text>
 	</d-box>
@@ -139,9 +142,17 @@ encounters 16/17/24/32; 24 is unused
 	<h2>General dialogue</h2>
 
 	<h3 id="dialogue-standard">Standard</h3>
+	<hr class="hr2">
+	<h4>Chapter 1</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>Snitter<span class="break"></span> snatter<span class="break"></span> what's the<span class="break"></span> matter</d-text>
+	</d-box>
+	<hr class="hr3">
+	<h4>Chapter 3</h4>
+	<d-box theme="battletalk">
+		<d-speaker>Rabbick</d-speaker>
+		<d-text>Snitter snatter,<span class="break"></span> what's the matter</d-text>
 	</d-box>
 	<hr class="hr2">
 	<d-box theme="battletalk">
@@ -159,10 +170,18 @@ encounters 16/17/24/32; 24 is unused
 		<d-text>Meow.</d-text>
 	</d-box>
 	<hr class="hr2">
+	<h4>Chapter 1</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Rabbick</d-speaker>
 		<d-text>Bunnies are<span class="break"></span> the sequel<span class="break"></span> to frogs.</d-text>
 	</d-box>
+	<hr class="hr3">
+	<h4>Chapter 3</h4>
+	<d-box theme="battletalk">
+		<d-speaker>Rabbick</d-speaker>
+		<d-text>Bunnies are the<span class="break"></span> sequel to frogs.</d-text>
+	</d-box>
+	<hr class="hr2">
 
 	<hr>
 
@@ -191,9 +210,18 @@ encounters 16/17/24/32; 24 is unused
 
 <section class="d-section" id="check">
 	<h2>Check</h2>
+
+	<h3>Chapter 1</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>RABBICK - AT 8 DF 1</d-text>
 		<d-text asterisk>This dusty bunny needs a bit<span class="break"></span> of spring cleaning.</d-text>
+	</d-box>
+
+	<hr>
+
+	<h3>Chapter 3</h3>
+	<d-box theme="battlemenu">
+		<d-text asterisk>RABBICK - This dusty bunny needs a bit of spring cleaning.</d-text>
 	</d-box>
 </section>
 
