Recruits: Remove extra text in ToC

--- a/misc/recruits.html
+++ b/misc/recruits.html
@@ -138,7 +138,7 @@ toc:
         name: Organikk
       -
         id: missmizzle
-        name: Miss MizzleLosing Momentum
+        name: Miss Mizzle
 ---
 <section class="d-section" id="chapter1">
 	<h2>Chapter 1</h2>
