Ribbick enc.: Add missing heading

--- a/encounters/ribbick.html
+++ b/encounters/ribbick.html
@@ -208,6 +208,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 	<hr>
 
+	<h3 id="check-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>RIBBICK - This dusty frog needs a bit of an autumn dirtying.</d-text>
 	</d-box>
