Add ACT descriptions to encounter template

--- a/encounters/0-template.html
+++ b/encounters/0-template.html
@@ -157,6 +157,14 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="check">
 	<h2>Check</h2>
 
+	<h3 id="check-description">Description</h3>
+	<d-box theme="battledesc">
+		<d-text>TODO</d-text>
+	</d-box>
+
+	<hr>
+
+	<h3 id="check-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>TODO</d-text>
 	</d-box>
@@ -164,6 +172,13 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 <section class="d-section" id="actnamehere">
 	<h2>Act_name_here</h2>
+
+	<h3 id="actnamehere-description">Description</h3>
+	<d-box theme="battledesc">
+		<d-text>TODO</d-text>
+	</d-box>
+
+	<hr>
 
 	<h3 id="actnamehere-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
@@ -183,6 +198,13 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="saction">
 	<h2 class="susie act">S-Action: Act_name_here</h2>
 
+	<h3 id="saction-description">Description</h3>
+	<d-box theme="battledesc">
+		<d-text>TODO</d-text>
+	</d-box>
+
+	<hr>
+
 	<h3 id="saction-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>TODO</d-text>
@@ -200,6 +222,13 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 <section class="d-section" id="raction">
 	<h2 class="ralsei act">R-Action: Act_name_here</h2>
+
+	<h3 id="raction-description">Description</h3>
+	<d-box theme="battledesc">
+		<d-text>TODO</d-text>
+	</d-box>
+
+	<hr>
 
 	<h3 id="raction-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
@@ -219,6 +248,13 @@ Then check that the obj whose file it appears in actually exists in the canonica
 <section class="d-section" id="naction">
 	<h2 class="noelle act">N-Action: Act_name_here</h2>
 
+	<h3 id="naction-description">Description</h3>
+	<d-box theme="battledesc">
+		<d-text>TODO</d-text>
+	</d-box>
+
+	<hr>
+
 	<h3 id="naction-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
 		<d-text asterisk>TODO</d-text>
@@ -236,6 +272,13 @@ Then check that the obj whose file it appears in actually exists in the canonica
 
 <section class="d-section" id="itemnamehere">
 	<h2>Using Item_name_here</h2>
+
+	<h3 id="itemnamehere-description">Description</h3>
+	<d-box theme="battledesc">
+		<d-text>TODO</d-text>
+	</d-box>
+
+	<hr>
 
 	<h3 id="itemnamehere-ft">Flavor text</h3>
 	<d-box theme="battlemenu">
