Knight/Shadowguy enc.: Update Check flavor text heading
Was previously "Usage" but "Flavor text" is what I've been using across all other encounters for text displayed upon usage, so that needed updating for consistency

--- a/encounters/knight.html
+++ b/encounters/knight.html
@@ -332,8 +332,8 @@ toc:
 
 	<hr>
 
-	<h3 id="check-usage">Usage</h3>
-	<h4 id="check-usage1">First time</h4>
+	<h3 id="check-ft">Flavor text</h3>
+	<h4 id="check-ft1">First time</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Kris analyzed the enemy!</d-text>
 	</d-box>
@@ -341,7 +341,7 @@ toc:
 		<d-text asterisk>But Kris<br> couldn't learn anything.</d-text>
 	</d-box>
 
-	<h4 id="check-usage2">Subsequent times</h4>
+	<h4 id="check-ft2">Subsequent times</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Kris points into the distance.</d-text>
 	</d-box>
