--- a/encounters/shadowguy.html
+++ b/encounters/shadowguy.html
@@ -203,18 +203,19 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="check-usage">Usage</h3>
+	<h3 id="check-ft">Flavor text</h3>
+	<h4>Standard</h4>
+	<d-box theme="battlemenu">
+		<d-text asterisk>SHADOWGUY - AT <img src="{{ '/assets/images/story/talkshadowguy/sharp.png' | relative_url }}" alt="♯" style="height: 0.8em; vertical-align: baseline;" /> DF <img src="{{ '/assets/images/story/talkshadowguy/flat.png' | relative_url }}" alt="♭" style="height: 0.8em; vertical-align: baseline;" /></d-text>
+		<d-text asterisk>Battling's just a side gig. Playing on stage is the dream!</d-text>
+	</d-box>
+
 	<h4>During the Doom Board fight with Tenna</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>SHADOWGUY - AT <img src="{{ '/assets/images/story/talkshadowguy/sharp.png' | relative_url }}" alt="♯" style="height: 0.8em; vertical-align: baseline;" /> DF <img src="{{ '/assets/images/story/talkshadowguy/flat.png' | relative_url }}" alt="♭" style="height: 0.8em; vertical-align: baseline;" /></d-text>
 		<d-text asterisk>The "Sharpshoot" act can shoot many things!</d-text>
 	</d-box>
 
-	<h4>During all other fights</h4>
-	<d-box theme="battlemenu">
-		<d-text asterisk>SHADOWGUY - AT <img src="{{ '/assets/images/story/talkshadowguy/sharp.png' | relative_url }}" alt="♯" style="height: 0.8em; vertical-align: baseline;" /> DF <img src="{{ '/assets/images/story/talkshadowguy/flat.png' | relative_url }}" alt="♭" style="height: 0.8em; vertical-align: baseline;" /></d-text>
-		<d-text asterisk>Battling's just a side gig. Playing on stage is the dream!</d-text>
-	</d-box>
 </section>
 
 <section class="d-section" id="boogie">
