Add some typo/wording fixes for Ch3/4
- Shadowguy encounter: Sharpshoot instructions
- Mizzle encounter: Embezzling Scarlixir
- Ch4 Church service: Catty's reading

Also remove updated items from TODO

--- a/encounters/mizzle.html
+++ b/encounters/mizzle.html
@@ -258,6 +258,12 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<p class="note">$100 is added to your total money.</p>
 	<hr class="hr2">
 	<p class="note">29.7% (30/101) chance:</p>
+	<h5>Prior to v0.0.094</h5>
+	<d-box theme="battlemenu">
+		<d-text asterisk>Stole Scarlixer!</d-text>
+	</d-box>
+	<hr class="hr3">
+	<h5>v0.0.094 onwards</h5>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Stole Scarlixir!</d-text>
 	</d-box>
