--- a/encounters/shadowguy.html
+++ b/encounters/shadowguy.html
@@ -260,9 +260,18 @@ Unused encounters with blank text:
 	</d-box>
 	<hr class="hr2">
 	<p class="note">The shooting sequence begins, accompanied by the following instructions:</p>
+	<hr class="hr2">
+	<h5>Prior to v0.0.094</h5>
+	<d-box theme="battlemenu">
+		<d-text asterisk>Aim with [Left][Right] and [Up][Down]!</d-text>
+		<d-text asterisk>Fire with [MENU]!</d-text>
+	</d-box>
+	<hr class="hr3">
+	<h5>v0.0.094 onwards</h5>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Press directions to aim and [MENU] to shoot!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<p class="note">A red crosshair appears on the screen, controlled by directions; pressing [MENU] has all party members shoot red heart-shaped bullets that pass through the crosshair. Shadowguys' hats or socks and other enemies' body parts appear brighter and can be hit by these bullets. At most 30 bullets can be shot (10 from each party member), and there is a 6-second time limit starting from when the first bullets are fired.</p>
 	<p class="note">Each bullet that hits gives 10% <span class="yellow">Mercy</span> to Shadowguys and 5% <span class="yellow">Mercy</span> to other enemy types. If any enemy has 100% <span class="yellow">Mercy</span> prior to this ACT's usage, they are automatically spared after being hit by enough bullets.</p>
 
