Document Pippins encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -173,7 +173,10 @@ items:
       -
         name: Island Board
         sublist:
-          # Pippins, Shuttah
+          -
+            url: pippins
+            name: Pippins
+          # Shuttah
       -
         name: Green Room
         sublist:
