Move unused encounter #s out of rendered page
Put it in a Liquid comment instead, keep it off the front-facing side

--- a/encounters/balthizard.html
+++ b/encounters/balthizard.html
@@ -100,6 +100,11 @@ toc:
 Check for encounter instances with the following regex:
 (global\.encounterno = |myencounter = |scr_encountersetup\(|scr_battle\()(151|158|162|166|168|189)\b
 Then check that the obj whose file it appears in actually exists in the canonical rooms!
+
+Unused encounters with blank text:
+	- 162 (Winglade)
+	- 166 (Mizzle)
+	- 168 (Organikk)
 {% endcomment %}
 
 <section class="d-section" id="prefight">
@@ -143,12 +148,6 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<d-box theme="battlemenu">
 		<d-text asterisk>Water, fire, air.</d-text>
 	</d-box>
-
-	<!-- UNUSED:
-		- 162: with Winglade
-		- 166: With Mizzle
-		- 168: With Organikk
-	-->
 
 	<hr>
 
