--- a/encounters/bibliox.html
+++ b/encounters/bibliox.html
@@ -88,6 +88,11 @@ toc:
 Check for encounter instances with the following regex:
 (encounterno = |myencounter = |scr_encountersetup\(|scr_battle\()(152|159|161|162|170)\b
 Then check that the obj whose file it appears in actually exists in the canonical rooms!
+
+Unused encounters with blank text:
+	- 159 (Mizzle)
+	- 164 (Guei)
+	- 170 (Wicabel)
 {% endcomment %}
 
 <section class="d-section" id="flavortext">
@@ -103,12 +108,6 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<d-box theme="battlemenu">
 		<d-text asterisk>The flapping of wings and pages fills the room.</d-text>
 	</d-box>
-
-	<!-- UNUSED:
-		- 159: with Mizzle
-		- 164: with Guei
-		- 170: with Wicabel
-	-->
 
 	<hr>
 
