--- a/encounters/mizzle.html
+++ b/encounters/mizzle.html
@@ -91,6 +91,15 @@ toc:
 Check for encounter instances with the following regex:
 (encounterno = |myencounter = |scr_encountersetup\(|scr_battle\()(153|159|165|166|167|171|184|185|189)\b
 Then check that the obj whose file it appears in actually exists in the canonical rooms!
+
+Unused encounters with blank text:
+	- 159 (Bibliox)
+	- 165 (Guei)
+	- 166 (Balthizard)
+	- 167 (Organikk)
+	- 177 (Wicabel)
+	- 184 (Two other Mizzles)
+	- 185 (Solo)
 {% endcomment %}
 
 <section class="d-section" id="flavortext">
@@ -112,16 +121,6 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<d-box theme="battlemenu">
 		<d-text asterisk>Water, fire, air.</d-text>
 	</d-box>
-
-	<!-- UNUSED:
-		- 159: Bibliox
-		- 165: Guei
-		- 166: Balthizard
-		- 167: Organikk
-		- 177: Wicabel
-		- 184: Two other Mizzles
-		- 185: Solo
-	-->
 
 	<hr>
 
