--- a/encounters/ribbick.html
+++ b/encounters/ribbick.html
@@ -80,6 +80,12 @@ toc:
 Check for encounter instances with the following regex:
 (encounterno = |myencounter = |scr_encountersetup\(|scr_battle\()(125|126|127|128|129|130|131)\b
 Then check that the obj whose file it appears in actually exists in the canonical rooms!
+
+Unused encounters with blank text:
+	- 127 (Shadowguy)
+	- 128 (Shuttah)
+	- 129 (Zapper)
+	- 130 (Pippins)
 {% endcomment %}
 
 <section class="d-section" id="flavortext">
@@ -95,13 +101,6 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<d-box theme="battlemenu">
 		<d-text asterisk>Ribbicks hopped into view!</d-text>
 	</d-box>
-
-	<!-- UNUSED:
-		- 127: Shadowguy
-		- 128: Shuttah
-		- 129: Zapper
-		- 130: Pippins
-	-->
 
 	<hr>
 
