Pippins encounter: Update TOC from defaults

--- a/encounters/pippins.html
+++ b/encounters/pippins.html
@@ -30,23 +30,23 @@ toc:
         name: Initial encounter
         subheadings:
           -
-            id: encounter-solo
-            name: Solo
+            id: encounter-pippins
+            name: With another Pippins
           -
-            id: encounter-otherenemyname
-            name: With Other_enemy_name
+            id: encounter-pippinses
+            name: With 2 other Pippinses
+          -
+            id: encounter-shadowguypippins
+            name: With Shadowguy and another Pippins
       -
         id: ft-standard
         name: Standard
       -
-        id: ft-tired
-        name: Tired
-      -
         id: ft-lowhp
         name: Low HP
       -
-        id: ft-spareable
-        name: Spareable
+        id: controllerswap
+        name: Swapped controllers argument
   -
     id: dialogue
     name: General dialogue
@@ -55,8 +55,10 @@ toc:
         id: dialogue-standard
         name: Standard
       -
-        id: dialogue-specialcondition
-        name: Special_condition
+        id: dialogue-sharpshoot
+        act_icon: [Susie, Ralsei]
+        custom_icon_positions: true
+        name: After being hit by ACTICON ACTICON Sharpshoot
   -
     name: ACTs
     subheadings:
