CT Cafe: Add crosslinks, clean stray formatting

--- a/locations/closetworld/town/cafe.html
+++ b/locations/closetworld/town/cafe.html
@@ -186,7 +186,7 @@ toc:
 		<d-option index="2" text="Nothing"></d-option>
 	</d-choices>
 	<d-option-panel index="0" theme="dark">
-		<p class="note">The Recruits menu opens, allowing you to view recruits and place them in the café's various seats.</p>
+		<p class="note">The <a href="{{ '/misc/recruits' | relative_url }}">Recruits menu</a> opens, allowing you to view recruits and place them in the café's various seats.</p>
 	</d-option-panel>
 	<d-option-panel index="1" theme="dark">
 		<h3>If you returned the <a href="{{ '/misc/darkitems#topcake' | relative_url }}">Top Cake</a> to Top Chef in Chapter 1</h3>
@@ -355,7 +355,7 @@ toc:
 		<d-option index="2" text="Exit"></d-option>
 	</d-choices>
 	<d-option-panel index="0" theme="dark">
-		<p class="note">The Recruits menu opens, allowing you to view recruits and place them in the café's various seats.</p>
+		<p class="note">The <a href="{{ '/misc/recruits' | relative_url }}">Recruits menu</a> opens, allowing you to view recruits and place them in the café's various seats.</p>
 	</d-option-panel>
 	<d-option-panel index="1" theme="dark">
 		<p class="note">At random:</p>
@@ -367,7 +367,7 @@ toc:
 		</d-box>
 		<d-box theme="dark">
 			<d-speaker>Swatch</d-speaker>
-			<d-text asterisk>Boss, please try not to use all of the sugar./</d-text>
+			<d-text asterisk>Boss, please try not to use all of the sugar.</d-text>
 		</d-box>
 		<hr class="hr3">
 		<p class="note">Available only if Susie is in the party.</p>
@@ -377,7 +377,7 @@ toc:
 		</d-box>
 		<d-box theme="dark">
 			<d-speaker>Swatch</d-speaker>
-			<d-text asterisk>This way, even if you eat it quickly, you won't notice the stains./</d-text>
+			<d-text asterisk>This way, even if you eat it quickly, you won't notice the stains.</d-text>
 		</d-box>
 		<hr class="hr3">
 		<p class="note">Available only if Ralsei is in the party.</p>
@@ -442,7 +442,7 @@ toc:
 		<d-option index="2" text="Exit"></d-option>
 	</d-choices>
 	<d-option-panel index="0" theme="dark">
-		<p class="note">The Recruits menu opens, allowing you to view recruits and place them in the café's various seats.</p>
+		<p class="note">The <a href="{{ '/misc/recruits' | relative_url }}">Recruits menu</a> opens, allowing you to view recruits and place them in the café's various seats.</p>
 	</d-option-panel>
 	<d-option-panel index="1" theme="dark">
 		<p class="note">At random:</p>
@@ -682,6 +682,7 @@ toc:
 	<hr>
 
 	<h3 id="tasque-visitor">As a café visitor</h3>
+	<p>Appears towards the top of the café if recruited, along with Tasque Manager if she was also recruited. See <a href="#tasquemanager2">Tasque Manager's corresponding dialogue</a>.</p>
 	<d-box theme="dark">
 		<d-text asterisk>(Seems well behaved.)</d-text>
 	</d-box>
