Document Top Bakery

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -18,6 +18,9 @@ items:
       -
         url: cafe
         name: Café
+      -
+        url: topbakery
+        name: Top Bakery
   -
     url: castle
     name: Ralsei's castle
