Document Winglade encounter

--- a/encounters/index.html
+++ b/encounters/index.html
@@ -223,7 +223,10 @@ items:
       -
         name: 2nd Sanctuary
         sublist:
-          # Winglade, Organikk, Wicabel, Sound of Justice
+          -
+            url: winglade
+            name: Winglade
+          # Organikk, Wicabel, Sound of Justice
       -
         name: 3rd Sanctuary
         sublist:
